Botão Ver consoles

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <section class="banner caixa">
             <h1 class="banner__chamada">Dezembro Promocional</h1>
             <p class="banner__explicacao">Produtos selecionados com 33% de desconto</p>
-            <button class="banner__botao" href="#">Ver Consoles</button>
+            <a href="#consoles"><button class="banner__botao">Ver Consoles</button></a>
         </section>
 
         <section class="produtos__secao">
@@ -109,9 +109,9 @@
             </div>
         </section>
 
-        <section class="produtos__secao">
+        <section class="produtos__secao" id="consoles">
 
-            <div class="produtos__secao__inicio">
+            <div class="produtos__secao__inicio" >
                 <h2 class="produtos__secao__inicio--titulo">Consoles</h2>
                 <a href="#" class="produtos__secao__inicio--ver">Ver tudo  </a>
             </div>
